@@ -1,3 +1,7 @@
+2018-02-01 Philipp Klaus Krause <pkk AT spth.de>
+
+	* index.php: long long is supported everywhere except for pic.
+
 2016-11-21 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* index.php: Update Ben Shi's responsibility.
